# ChangeLog for sci-geosciences/mobac
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mobac-1.9.4 (05 Mar 2012)

  05 Mar 2012; Michael Weber <xmw@gentoo.org> +mobac-1.9.4.ebuild,
  +metadata.xml:
  Initial import
