@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST mobac-1.9.4_src.zip 11265191 RMD160 5084a56deff6308efd2a19a1ee5a22d18fbc8e38 SHA1 fe38d7613ee905f9ea245fc6c1c85ab483b9ca7f SHA256 101e2650b76929b50ee02ef4a57cfdfca8867d00eb048f9bf3a427e6a4172fba
+DIST mobac-1.9.5_src.zip 10316478 RMD160 8ef0e3f8200c5cfc6810e2ba8d35757c82f18352 SHA1 b7fb39f999de977e4d22d5f3c82bccdf78c37af5 SHA256 47eef2e366763fab68ed5fbdfb591ec8a5c4a58edd1f657771349c5aef36addf
 EBUILD mobac-1.9.4.ebuild 1103 RMD160 cebadb12563d149667b400d3e5b86479519bba11 SHA1 dcb0bddf4a883aca283cf3f8c104cd23535c6db0 SHA256 c04ee3ec655f2f227a456a7f22a5e795a9fba47e7f05e73957c65ac143ec2464
-MISC ChangeLog 252 RMD160 b2ea3f3c3979128fb2c94156c680d88b264afac0 SHA1 1d17741c73e5003441df5d2fe4ddabe506b833e2 SHA256 b7f05f0c8fdd95efd6ac118c3eacdd3a97a8bb99aef86fa180de76fac0c182b0
+EBUILD mobac-1.9.5.ebuild 1103 RMD160 cebadb12563d149667b400d3e5b86479519bba11 SHA1 dcb0bddf4a883aca283cf3f8c104cd23535c6db0 SHA256 c04ee3ec655f2f227a456a7f22a5e795a9fba47e7f05e73957c65ac143ec2464
+MISC ChangeLog 363 RMD160 cef082209e58d26440ce61285210b899f7317626 SHA1 8657cf5d34c8e578247311da391d638751baa3c8 SHA256 4a773d7bb37e3386f81fdc28d43660d8afdbb5c6f5cfc7a37b473fc4156c6c46
 MISC metadata.xml 224 RMD160 2a7e22a99ec669c5b961c3d1738a0cda58264318 SHA1 f6fd81fac4df7d7995b1600848b265fceda692f8 SHA256 f810c6de744adceee241992d3f713142db3e7025986f6cc5898cfe3c9cb2f4a7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iF4EAREIAAYFAk9UPsYACgkQknrdDGLu8JDjSgD8Dy7xE3YanH2AG8GtJ1OK6koA
-O4liWQ+1jjasDvRoGFIBAJK0Jo/XrR36X713cUQNMsgCjBj8LF1acNdgsYp6Aj2D
-=16Fd
+iF4EAREIAAYFAk9q+iwACgkQknrdDGLu8JCVGAEAkaib8pcR43VWTY6Z4IBlxkj4
+9C27vT5ygkqhoAmTALAA/RLRxkQpJVPbYEMGUVOXkv66QNzPEuBOpvvBHovdLFp6
+=Omfk
 -----END PGP SIGNATURE-----
