@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*mobac-1.9.5 (22 Mar 2012)
+
+  22 Mar 2012; Michael Weber <xmw@gentoo.org> +mobac-1.9.5.ebuild:
+  Version bump
+
 *mobac-1.9.4 (05 Mar 2012)
 
   05 Mar 2012; Michael Weber <xmw@gentoo.org> +mobac-1.9.4.ebuild,
